# pretix-payment-dibs

./: LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.py
pretix_paymentdibs/: __init__.py  apps.py  payment.py  signals.py  urls.py  views.py
pretix_paymentdibs/locale/da/LC_MESSAGES/: django.po
pretix_paymentdibs/locale/de_Informal/LC_MESSAGES/: django.po
pretix_paymentdibs/static/pretix_paymentdibs/: redirect.js
pretix_paymentdibs/templates/pretix_paymentdibs/: checkout_confirm.html  control.html  control_refund.html  mail_text.html  order_paid.html  order_pending.html  order_pending_mail.html  payment_form.html  payment_paid.html  redirect.html
pretix_paymentdibs/templates/pretixplugins/pretix_paymentdibs/: checkout_payment_form.html  payment_pending.html  redirect.html
pretix_paymentdibs/templatetags/: dibs_extras.py
